# dflow-amm-interface

./: Cargo.toml
.github/workflows/: check-licenses.yml
crates/cube-amm/: Cargo.toml
crates/cube-amm/examples/: feature_coverage_live.rs  live_integration.rs
crates/cube-amm/src/: amm.rs  constants.rs  ix.rs  lib.rs  state.rs
crates/cube-amm/src/math/: cubic_math.rs  fee.rs  fixed_point.rs  log_exp_math.rs  max_selloff.rs  mod.rs
crates/cube-amm/tests/: amm_trait.rs  feature_coverage.rs
